Static code analysis diffs