@@ -35,7 +35,7 @@ public class Entities {
 				start++;
 				radix = 16;
 			}
-			Character c = new Character((char) Integer.parseInt(entity
+			Character c = Character.valueOf((char) Integer.parseInt(entity
 					.substring(start), radix));
 			return c.toString();
 		} else {
@@ -68,7 +68,7 @@ public class Entities {
 	}
 
 	static final void add(String entity, int value) {
-		decoder.put(entity, (new Character((char) value)).toString());
+		decoder.put(entity, (Character.valueOf((char) value)).toString());
 		if (value < 0x100)
 			encoder[value] = entity;
 	}
